// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 22,
    }
  }
>
  <div
    pathname={undefined}
    text="para ver o contato do fornecedor."
  >
    SignUpLink
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 22,
    }
  }
>
  <div
    to="/suppliers/undefined"
  >
    Link - 
  </div>
</div>
`;
